refactor: streamline job orchestrator and settings, add comprehensive tests
- Simplify JobOrchestratorService stage management logic
- Add JobRunControllerTest for REST endpoint verification
- Add OrchestratorView test suite for Vue component behavior
- Add job API test utilities for type-safe API client testing
- Enhance JobRunRepository with optimized queries

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013W2XNgVAkWQwY216uRZbhT